# idgener

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README_ZH.md  docker-compose.yaml
.github/workflows/: ci.yaml  publish.yaml  release.yaml
docs/: http-client.env.json  idgend.http  order.md  snowflake.md  todo.md
etc/: idgend.yaml  log4rs.yaml
libs/merge/.builds/: archlinux-msrv.yml  archlinux.yml
scripts/: changelist.sh  release.sh  source.sh
src/: lib.rs
src/cluster/: mod.rs  multicast.rs  nodes.rs
src/config/: logger.rs  mod.rs  options.rs
src/generator/: mod.rs  snowflake.rs
src/server/: generator.rs  health.rs  mod.rs  nodes.rs  routers.rs  server.rs
