[package]
name = "idgener"
version = "0.1.0-SNAPSHOT"
authors = ["xhaiker <wo@renzhen.la>"]
description = "ID generator for multimodal multi data center"
documentation = "https://ihaiker.github.io/idgener"
homepage = "https://idgener.renzhen.la"
repository = "https://github.com/ihaiker/idgener"
license-file = "LICENSE"
keywords = ["id", "idgener", "id generator", "snowflake"]
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.73"
serde_yaml = "0.8.21"
structopt = "0.3.25"
structopt-yaml = "0.4.6"
merge-yaml-hash = "0.2.0"
anyhow = "1.0.45"
envmnt = "0.9.1"
log4rs = "1.0.0"
log = "0.4.14"
merge = { path = "libs/merge", features = ["default", "std"] }
chrono = "0.4.19"
rand = "0.8.0"
actix-server = "1.0.4"
actix-web = "3.3.2"
actix-http = "2.2.1"
actix-files = "0.5.0"
actix-rt = "1.1.1"
defer = "0.1.0"
num-traits = "0.2.14"
lazy_static = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
futures = { version = "0.3.18", features = ["thread-pool", "executor"] }
byteorder = "1.4.3"
ctrlc = "3.2.1"
num_cpus = "1.13.1"
http-client = "6.5.1"

[[bin]]
name = "idgener"
path = "./src/bin/idgener.rs"

[dev-dependencies]

[build-dependencies]